--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -139,7 +139,7 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
+        <item row="3" column="1">
          <widget class="QPushButton" name="power_pushButton">
           <property name="minimumSize">
            <size>
@@ -163,6 +163,20 @@
          <widget class="QLineEdit" name="lineEditServerIP">
           <property name="text">
            <string>10.206.12.202</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QLineEdit" name="lineEditServerPort">
+          <property name="text">
+           <string>6666</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_9">
+          <property name="text">
+           <string>服务器端口</string>
           </property>
          </widget>
         </item>
