--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -155,7 +155,7 @@
         <item row="0" column="1">
          <widget class="QLineEdit" name="lineEditRoomID">
           <property name="text">
-           <string>test</string>
+           <string>zdhsb1</string>
           </property>
          </widget>
         </item>
