--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -139,7 +139,21 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="lineEditRoomID">
+          <property name="text">
+           <string>test</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="lineEditServerIP">
+          <property name="text">
+           <string>127.0.0.1</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
          <widget class="QPushButton" name="power_pushButton">
           <property name="minimumSize">
            <size>
@@ -152,17 +166,17 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
-         <widget class="QLineEdit" name="lineEditRoomID">
+        <item row="2" column="1">
+         <widget class="QLineEdit" name="lineEditServerPort">
           <property name="text">
-           <string>zdhsb1</string>
+           <string>6666</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QLineEdit" name="lineEditServerIP">
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_9">
           <property name="text">
-           <string>127.0.0.1</string>
+           <string>服务器端口</string>
           </property>
          </widget>
         </item>
@@ -216,7 +230,6 @@
  <tabstops>
   <tabstop>lineEditRoomID</tabstop>
   <tabstop>lineEditServerIP</tabstop>
-  <tabstop>power_pushButton</tabstop>
   <tabstop>turn_up_pushButton</tabstop>
   <tabstop>turn_down_pushButton</tabstop>
   <tabstop>low_pushButton</tabstop>
