--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -142,14 +142,14 @@
         <item row="0" column="1">
          <widget class="QLineEdit" name="lineEditRoomID">
           <property name="text">
-           <string>test</string>
+           <string>jiannan</string>
           </property>
          </widget>
         </item>
         <item row="1" column="1">
          <widget class="QLineEdit" name="lineEditServerIP">
           <property name="text">
-           <string>127.0.0.1</string>
+           <string>10.206.12.202</string>
           </property>
          </widget>
         </item>
